# gendiff

./: .coverage  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: tests_linter_ci.yml
config/: __init__.py  project_root.py
gendiff/: __init__.py  cli.py  gendiff.py  generate.py  parse_file.py  parse_files.py  ref.py  stylish.py  tree.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff_ref.py  start_gendiff.py
tests/: test_gendiff.py
tests/fixtures/: result.json
