[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Egor Titov"]
readme = "README.md"
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.10"
argparse = "^1.4.0"
flake8 = "^7.0.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.start_gendiff:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
